djangokubernetesproject/django-ingress copy.yaml
# https://thekoguryo.github.io/en/oracle-cloudnative/oss/ingress-controller/1.install-nginx-ingress-controller/
# https://docs.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengsettingupingresscontroller.htm

apiVersion: v1
kind: Namespace
metadata:
  name: default

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
spec: 
  rules: 
  - http:
    paths:
      - pathType: Prefix
        path: /home
        backend:
          service:
            name: home-svc
            port:
              number: 8000
      - pathType: Prefix
        path: /page
        backend:
          service:
            name: page-svc
            port:
              number: 8000

    http:
      paths:
      - pathType: Prefix
        path: /home
        backend:
          service:
            name: home-svc
            port:
              number: 8000

      - pathType: Prefix
        path: /page
        backend:
          service:
            name: page-svc
            port:
              number: 8000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ing
  annotations:
    # oracle cloud load balancer
    # service.beta.kubernetes.io/oci-load-balancer-type: "nlb"
    # oci.oraclecloud.com/load-balancer-type: "nlb"
    # oci-network-load-balancer.oraclecloud.com/is-preserve-source: "true"

    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home-svc
            port:
              number: 8000
  - http:
      paths:
      - path: /page
        pathType: Prefix
        backend:
          service:
            name: page-svc
            port:
              number: 8000


# spec:
#   rules:
#   - host: django.example.com
#     http:
#       paths:
#       - path: /home
#         backend:
#           service:
#             name: home-svc
#           service:
#             name: http
#             port: 80
#       - path: /page
#         backend:
#           service:
#             name: page-svc
#           service:
#             name: http
#             port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: ndrohith09/django-ingress
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: home-svc 
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: home

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: page 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: page
  template:
    metadata:
      labels:
        app: page
    spec:
      containers:
      - name: page
        image: ndrohith09/django-ingress
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: page-svc 
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: page


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: test-ingress
# spec:
#   defaultBackend:
#     service:
#       name: home-svc
#       port:
#         number: 8000



# https://thekoguryo.github.io/en/oracle-cloudnative/oss/ingress-controller/1.install-nginx-ingress-controller/
# https://docs.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengsettingupingresscontroller.htm

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home-svc
            port:
              number: 8000
  - http:
      paths:
      - path: /page
        pathType: Prefix
        backend:
          service:
            name: page-svc
            port:
              number: 8000



---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: ndrohith09/django-ingress
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: home-svc 
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: home

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: page 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: page
  template:
    metadata:
      labels:
        app: page
    spec:
      containers:
      - name: page
        image: ndrohith09/django-ingress
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: page-svc 
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: page
